# multiple-object-tracking-lidar

./: CMakeLists.txt  README.md  package.xml
include/ihgp/: InfiniteHorizonGP.hpp
include/kf_tracker_2/: kf_tracker_2.h
include/multiple_object_tracking_lidar/: multiple_object_tracking_lidar.h
launch/: simTracker.launch
map/: sim_01.pgm  sim_01.yaml
rviz/: rviz_config.rviz  rviz_config_real_mapbuild.rviz  rviz_config_real_mapread.rviz  rviz_config_sim_mapread_teb.rviz  tracker_config.rviz
src/: CKalmanFilter.cpp  featureDetection.cpp  kf_tracker_2(before_cc_merge).cpp  kf_tracker_2(before_kf).cpp  kf_tracker_2(before_map).cpp  kf_tracker_2.cpp  kf_tracker_2_node.cpp  multiple_object_tracking_lidar.cpp  multiple_object_tracking_lidar_node.cpp  temp.cpp
src/ihgp/: InfiniteHorizonGP.cpp
