<?xml version="1.0"?>
<package format="2">
  <name>kf_tracker_2</name>
  <version>0.0.0</version>
  <description>ROS package for Multiple objects detection, tracking and classification from LIDAR scans/point-clouds revised version</description>
  <maintainer email="mlcstacco@todo.todo">mlcstacco</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>costmap_converter</depend>
  <depend>visualization_msgs</depend>

  <export></export>
</package>
